fixed padding as too big on skills ul

--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ to {border-bottom-color: yellow;} */
 	}
 	.skills ul {
 		margin: 0;
-		padding: 2%;
+		padding: 1vw;
 	}
 	.skills li {
 		display: inline-block;
